// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sets submit button label 'Save' when saving is false 1`] = `
<form
  onSubmit={[MockFunction]}
>
  <h2>
    Edit
     Items in Gallery
  </h2>
  <div
    className="form-group"
  >
    <label
      htmlFor="title"
    >
      Title
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="title"
        onChange={[MockFunction]}
        type="text"
        value="Pepe Jeans"
      />
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="vender"
    >
      Vender Name
    </label>
    <div
      className="field"
    >
      <select
        className="form-control"
        name="vender"
        onChange={[MockFunction]}
        value={1}
      >
        <option
          value=""
        >
          Select Vender
        </option>
        <option
          value={1}
        >
          Allen Solly creations
        </option>
        <option
          value={2}
        >
          Adhya Creations
        </option>
        <option
          value={3}
        >
          SHEIN
        </option>
      </select>
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="size"
    >
      Size
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="size"
        onChange={[MockFunction]}
        type="text"
        value={
          Array [
            "medium",
            "small",
            "large",
          ]
        }
      />
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="amount"
    >
      amount
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="amount"
        onChange={[MockFunction]}
        type="text"
        value="200$"
      />
    </div>
  </div>
  <button
    className="btn btn-primary"
    disabled={false}
    type="submit"
  >
    Save
  </button>
</form>
`;

exports[`sets submit button label 'Saving...' when saving is true 1`] = `
<form
  onSubmit={[MockFunction]}
>
  <h2>
    Edit
     Items in Gallery
  </h2>
  <div
    className="form-group"
  >
    <label
      htmlFor="title"
    >
      Title
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="title"
        onChange={[MockFunction]}
        type="text"
        value="Pepe Jeans"
      />
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="vender"
    >
      Vender Name
    </label>
    <div
      className="field"
    >
      <select
        className="form-control"
        name="vender"
        onChange={[MockFunction]}
        value={1}
      >
        <option
          value=""
        >
          Select Vender
        </option>
        <option
          value={1}
        >
          Allen Solly creations
        </option>
        <option
          value={2}
        >
          Adhya Creations
        </option>
        <option
          value={3}
        >
          SHEIN
        </option>
      </select>
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="size"
    >
      Size
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="size"
        onChange={[MockFunction]}
        type="text"
        value={
          Array [
            "medium",
            "small",
            "large",
          ]
        }
      />
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="amount"
    >
      amount
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="amount"
        onChange={[MockFunction]}
        type="text"
        value="200$"
      />
    </div>
  </div>
  <button
    className="btn btn-primary"
    disabled={true}
    type="submit"
  >
    Saving...
  </button>
</form>
`;
